--- a/kargo/warehouse.yaml
+++ b/kargo/warehouse.yaml
@@ -7,8 +7,8 @@ spec:
   subscriptions:
   - image:
       repoURL: ghcr.io/akuity/guestbook
-      imageSelectionStrategy: SemVer
       allowTags: ^v?[0-9]+\.[0-9]+\.[0-9]+([\+-].*)?$
+      constraint: 0.0.1
   - git:
-      repoURL: https://github.com/akuity/kargo-advanced.git
+      repoURL: https://github.com/BenHesketh21/kargo-advanced.git
       branch: main
