--- a/guestbook-dev-deployment-guestbook.yaml
+++ b/guestbook-dev-deployment-guestbook.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: guestbook
+  namespace: guestbook-dev
 spec:
   replicas: 1
   revisionHistoryLimit: 3
@@ -14,8 +15,8 @@ spec:
         app: guestbook
     spec:
       containers:
-      - image: ghcr.io/akuity/guestbook:latest
+      - image: ghcr.io/akuity/guestbook:v0.0.1
         name: guestbook
         ports:
-        - name: http
-          containerPort: 3000
+        - containerPort: 3000
+          name: http
